@@ -89,19 +89,14 @@
                 <configuration>
                     <source>21</source>
                     <target>21</target>
-                    <!-- Enable virtual threads preview is stable in 21 -->
-                    <!-- <compilerArgs>
-                        <arg>--enable-preview</arg>
-                    </compilerArgs> -->
+                    
                 </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                      <version>3.2.5</version>
-                <!-- <configuration>
-                    <argLine>--enable-preview</argLine>
-                </configuration> -->
+                
             </plugin>
         </plugins>
     </build>
